--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-jobs:
-  validate-yamls:
-    docker:
-      - image: stefanprodan/hrval:v2.9.0
-    steps:
-      - checkout
-      - run:
-          name: Validate workloads
-          environment:
-            KUBE_VER: "1.16.0"
-          command: |
-            kubeval --strict --ignore-missing-schemas --kubernetes-version ${KUBE_VER} -d namespaces,workloads,releases
-      - run:
-          name: Validate releases
-          environment:
-            IGNORE_VALUES: "false"
-            KUBE_VER: "1.16.0"
-            HELM_VER: "v2"
-          command: |
-            hrval releases/ $IGNORE_VALUES $KUBE_VER $HELM_VER
-
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  version: 2
-  validate:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - validate-yamls:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
+      - welcome/run
